--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,9 @@
-application: dance
+application: higashi-dance-network
 version: 1
 runtime: python
 api_version: 1
+
+default_expiration: "1d"
 
 handlers:
 
