--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,8 @@
 application: higashi-dance-network
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: no
 
 default_expiration: "1m"
 
