--- a/app.yaml
+++ b/app.yaml
@@ -4,7 +4,7 @@ runtime: python27
 api_version: 1
 threadsafe: no
 
-default_expiration: "1m"
+default_expiration: "1h"
 
 skip_files:
 - ^(node_modules/.*)
