--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "http://higashi-dance-network.appspot.com/",
   "main": "index.js",
   "scripts": {
-      "build": "gulp build",
-      "watch": "gulp watch"
+    "build": "browserify public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js -t [ babelify --presets [ es2015 ] ]",
+    "watch": "watchify   public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js -t [ babelify --presets [ es2015 ] ] --verbose "
   },
   "repository": {
     "type": "git",
@@ -18,13 +18,11 @@
   },
   "homepage": "https://github.com/hitode909/higashi-dance-network#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
     "browserify": "^13.0.1",
-    "gulp": "^3.9.1",
-    "gulp-coffee": "^2.3.2"
+    "watchify": "^3.9.0"
   },
   "dependencies": {
-    "coffeeify": "^2.0.1",
-    "gulp-coffeeify": "^0.1.8",
-    "vinyl-source-stream": "^1.1.0"
   }
 }
