--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "browserify public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js -t [ babelify --presets [ es2015 ] ]",
-    "watch": "watchify   public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js -t [ babelify --presets [ es2015 ] ] --verbose "
+    "watch": "watchify   public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js -t [ babelify --presets [ es2015 ] ] --verbose",
+    "lint" : "eslint public/kasanegi/src/*"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
+    "eslint": "^3.19.0",
     "watchify": "^3.9.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
