--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "http://higashi-dance-network.appspot.com/",
   "main": "index.js",
   "scripts": {
-    "build": "browserify public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js -t [ babelify --presets [ es2015 ] ]",
-    "watch": "watchify   public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js -t [ babelify --presets [ es2015 ] ] --verbose",
-    "lint" : "eslint public/kasanegi/src/*"
+    "build": "browserify public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js -t [ babelify --presets [ es2015 flow ] ]",
+    "watch": "watchify   public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js -t [ babelify --presets [ es2015 flow ] ] --verbose",
+    "lint": "eslint public/kasanegi/src/*"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/hitode909/higashi-dance-network#readme",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "eslint": "^3.19.0",
+    "flow-bin": "^0.44.2",
+    "flow-typed": "^2.1.1",
     "watchify": "^3.9.0"
   },
   "dependencies": {}
