--- a/package.json
+++ b/package.json
@@ -4,13 +4,31 @@
   "description": "http://higashi-dance-network.appspot.com/",
   "main": "index.js",
   "scripts": {
-    "build": "browserify public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js -t [ babelify --presets [ es2015 flow ] ]",
-    "watch": "watchify   public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js -t [ babelify --presets [ es2015 flow ] ] --verbose",
+    "build": "browserify public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js",
+    "watch": "watchify   public/kasanegi/src/main.js -o public/kasanegi/js/bundle.js --verbose",
     "lint": "eslint public/kasanegi/src/*"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hitode909/higashi-dance-network.git"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "flow"
+          ]
+        }
+      ],
+      "browserify-global-shim"
+    ]
+  },
+  "browserify-global-shim": {
+    "jquery": "$",
+    "underscore": "_"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +42,7 @@
     "babel-preset-flow": "^6.23.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
+    "browserify-global-shim": "^1.0.3",
     "eslint": "^3.19.0",
     "flow-bin": "^0.44.2",
     "flow-typed": "^2.1.1",
