--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
   "homepage": "https://github.com/hitode909/higashi-dance-network#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "browserify-global-shim": "^1.0.3",
     "eslint": "^3.19.0",
+    "eslint-plugin-flowtype": "^2.32.1",
     "flow-bin": "^0.44.2",
     "flow-typed": "^2.1.1",
     "watchify": "^3.9.0"
