--- a/public/kasanegi/package.json
+++ b/public/kasanegi/package.json
@@ -4,13 +4,20 @@
   "description": "kasanegi",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/jquery": "^3.3.29",
     "@types/underscore": "^1.8.14",
-    "tsc": "^1.20150623.0"
+    "jquery": "^3.4.0",
+    "npm-run-all": "^4.1.5",
+    "webpack": "^4.30.0"
+  },
+  "devDependencies": {
+    "ts-loader": "^5.4.3",
+    "typescript": "^3.4.5",
+    "webpack-cli": "^3.3.1"
   }
 }
