--- a/public/kasanegi/package.json
+++ b/public/kasanegi/package.json
@@ -4,7 +4,9 @@
   "description": "kasanegi",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build:bundle": "webpack --config webpack.config.js",
+    "build::sw": "webpack --config webpack.sw.config.js",
+    "build": "run-p build:*"
   },
   "author": "",
   "license": "ISC",
