--- a/app.yaml
+++ b/app.yaml
@@ -39,6 +39,8 @@ handlers:
   upload: public/kasanegi/index.html
   secure: always
   redirect_http_response_code: 301
+  http_headers:
+    Feature-Policy: unsized-media 'none'
 
 - url: (.*)/
   static_files: public\1/index.html
