--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,4 @@
-runtime: python27
-api_version: 1
-threadsafe: no
+runtime: nodejs12
 
 default_expiration: "1m"
 
@@ -16,23 +14,11 @@ handlers:
   upload: public/favicon.ico
   mime_type: image/x-icon
 
+- url: /weather/
+  script: weather.js
+
 - url: /proxy/.*
-  script: proxy/proxy.py
-
-- url: /kasanegi
-  script: fallback.py
-
-- url: /iromiru
-  script: fallback.py
-
-- url: /hanabi
-  script: fallback.py
-
-- url: /bon2/
-  script: fallback.py
-
-- url: /data/.*
-  script: data.py
+  script: proxy.js
 
 - url: /kasanegi/
   static_files: public/kasanegi/index.html
